My Order List and Order details

--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -2,6 +2,7 @@
 <h2>My Orders</h2>
 
 <div class="booking-history">
+
     <div class="booking-info clearfix">
         <h4 class="box-title">
             <i class="icon soap-icon-card yellow-color circle"></i>Order
@@ -10,14 +11,16 @@
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>3 items
         </h4>
-        <h4 class="box-title col-lg-offset-1">
+        <!--<h4 class="box-title col-lg-offset-1">
             <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>
+        </h4>-->
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>$ 23,456.00
         </h4>
 
         <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
     </div>
     <div class="booking-info clearfix">
         <h4 class="box-title">
@@ -27,14 +30,16 @@
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>3 items
         </h4>
-        <h4 class="box-title col-lg-offset-1">
+        <!--<h4 class="box-title col-lg-offset-1">
             <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>
+        </h4>-->
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>$ 23,456.00
         </h4>
 
         <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
     </div>
     <div class="booking-info clearfix">
         <h4 class="box-title">
@@ -44,14 +49,35 @@
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>3 items
         </h4>
-        <h4 class="box-title col-lg-offset-1">
+        <!--<h4 class="box-title col-lg-offset-1">
             <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>
+        </h4>-->
         <h4 class="box-title col-lg-offset-1">
             <i class="icon yellow-color circle"></i>$ 23,456.00
         </h4>
 
         <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
+    </div>
+    <div class="booking-info clearfix">
+        <h4 class="box-title">
+            <i class="icon soap-icon-card yellow-color circle"></i>Order
+            <small>ID : 1234567890</small>
+        </h4>
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>3 items
+        </h4>
+        <!--<h4 class="box-title col-lg-offset-1">
+            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
+        </h4>-->
+        <h4 class="box-title col-lg-offset-1">
+            <i class="icon yellow-color circle"></i>$ 23,456.00
+        </h4>
+
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
     </div>
 
     <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
