--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -1,2 +1,117 @@
-<h1>Order in details</h1>
- <button ui-sref="main.account.orders.list">Back to list</button>
+<div class="booking-information travelo-box" style="margin-bottom: 0px;">
+
+    <div class="booking-confirmation clearfix">
+        <i class="soap-icon-insurance icon circle"></i>
+        <div class="message">
+            <h4 class="main-message">Your Order is completed !</h4>
+            <p>Please find your order details below.</p>
+        </div>
+        <a href="#" class="button print-button btn-small uppercase">Cancel Order</a>
+        <a href="#" class="button print-button btn-small uppercase">Return</a>
+        <a href="#" class="button print-button btn-small uppercase">Print Details</a>
+
+    </div>
+    <hr />
+    <h2>Order Details</h2>
+    <dl class="term-description">
+        <dt>Order number:</dt><dd>5784-BD245</dd>
+        <dt>First name:</dt><dd>Fawad</dd>
+        <dt>Last name:</dt><dd>Hasan</dd>
+        <dt>E-mail address:</dt><dd>fawad.hasan@gmail.com</dd>
+        <dt>Street Address and number:</dt><dd>353 Third floor Avenue</dd>
+        <dt>Town / City:</dt><dd>Houston,Texas</dd>
+        <dt>ZIP code:</dt><dd>22480</dd>
+        <dt>Country:</dt><dd>United States of America</dd>
+    </dl>
+
+    <hr />
+
+</div>
+<div id="tour-details" class="travelo-box" load-indicator>
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
+        <div class="description">
+            <h4>item product name <br /><small>San Francisco</small></h4>
+        </div>
+        <div class="table-cell">
+            <dl class="term-description">
+                <dt>Rented For</dt><dd>20 days</dd>
+                <dt>Order Type</dt><dd>Postpaid</dd>
+            </dl>
+        </div>
+        <div class="price-section table-cell">
+            <div class="price">
+                <div class="price-per-unit">$2100</div>
+            </div>
+        </div>
+    </div>
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
+        <div class="description">
+            <h4>item product name <br /><small>San Francisco</small></h4>
+        </div>
+        <div class="table-cell">
+            <dl class="term-description">
+                <dt>Rented For</dt><dd>20 days</dd>
+                <dt>Order Type</dt><dd>Postpaid</dd>
+            </dl>
+        </div>
+        <div class="price-section table-cell">
+            <div class="price">
+                <div class="price-per-unit">$2100</div>
+            </div>
+        </div>
+    </div>
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
+        <div class="description">
+            <h4>item product name <br /><small>San Francisco</small></h4>
+        </div>
+        <div class="table-cell">
+            <dl class="term-description">
+                <dt>Rented For</dt><dd>20 days</dd>
+                <dt>Order Type</dt><dd>Postpaid</dd>
+            </dl>
+        </div>
+        <div class="price-section table-cell">
+            <div class="price">
+                <div class="price-per-unit">$2100</div>
+            </div>
+        </div>
+    </div>
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
+        <div class="description">
+            <h4>item product name <br /><small>San Francisco</small></h4>
+        </div>
+        <div class="table-cell">
+            <dl class="term-description">
+                <dt>Rented For</dt><dd>20 days</dd>
+                <dt>Order Type</dt><dd>Postpaid</dd>
+            </dl>
+        </div>
+        <div class="price-section table-cell">
+            <div class="price">
+                <div class="price-per-unit">$2100</div>
+            </div>
+        </div>
+    </div>
+    <div class="intro2 small-box border-box table-wrapper hidden-table-sms cart-total">
+        <div class="description">
+            <h4>Cart Total</h4>
+        </div>
+
+        <br />
+        <div class="table-cell">
+            <dl class="term-description">
+                <dt>Shipping Cost</dt><dd>${{mdl.data.shipping_charge}}</dd>
+                <dt>Service Tax </dt><dd>${{0}}</dd>
+
+            </dl>
+        </div>
+        <div class="price-section table-cell">
+            <div class="price"><div class="price-per-unit">${{mdl.data.total}}</div></div>
+        </div>
+    </div>
+    <a class="button green btn-large uppercase pull-right" ui-sref="main.account.orders.list">Back to Order List</a>
+</div>
