Alignment issue fixed

--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -62,7 +62,7 @@
                         <dt class="display-counter" data-value="1570">0</dt>
                         <dd>Service Tickets</dd>
                     </dl>
-                    <i class="icon soap-icon-stories flip-effect"></i>
+                    <i class="icon soap-icon-stories"></i>
                 </div>
                 <div class="description">
                     <i class="icon soap-icon-longarrow-right"></i>
