--- a/src/app/views/account/equipments/add/add.html
+++ b/src/app/views/account/equipments/add/add.html
@@ -115,10 +115,10 @@
                 </div>
             </div>
             <hr>
-            <h2>Upload Profile Photo</h2>
+            <h2>Upload Equipment Images</h2>
             <div class="row form-group">
                 <div class="col-sms-12 col-sm-6 no-float">
-                    <div class="fileinput button" ngf-multiple="true" ngf-select ngf-change="addEquiMdl.filesToUpload=$files">Upload on file change</div>
+                    <div class="fileinput button" ngf-multiple="true" ngf-select ngf-change="addEquiMdl.filesToUpload=$files">Upload Images</div>
 
                     <br/>
                     <div ngf-drop ng-model="addEquiMdl.filesToUpload" class="upload-drop-zone"
