inventory issues fixed

--- a/src/app/views/account/inventory/add/add.html
+++ b/src/app/views/account/inventory/add/add.html
@@ -41,11 +41,10 @@
 
             <hr>
             <br />
-            <div class="from-group">
-                <button type="submit" class="btn-medium col-sms-6 col-sm-4">Save Inventory</button>
-                <button class="btn-medium btn-default col-sms-6 col-sm-4" ui-sref="main.account.inventory.list">CANCEL</button>
+            <div class="from-group block">
+                <button type="submit" class="button btn-medium orange">Save Inventory</button>
+                <button class="button btn-medium silver" ui-sref="main.account.inventory.list">CANCEL</button>
             </div>
-
         </div>
     </form>
 </div>
