--- a/src/app/views/account/inventory/list/list.html
+++ b/src/app/views/account/inventory/list/list.html
@@ -7,10 +7,10 @@
             </select>
         </div>
     </div>
-    <div class="col-sms-6 col-sm-6">
-        <button class=" status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button>
-        <button class="btn-mini status pull-right add-button" ui-sref="main.account.jobsites.add" href="#/account/jobsites/add">Add Jobsite</button>
-    </div>
+    <h2>
+        <!--<button class="status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button>
+        --><button class="status btn-mini status pull-right add-button" ui-sref="main.account.inventory.add">Add Inventory</button>
+    </h2>
 </div>
 <br/>
 <br/>
