--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -27,7 +27,7 @@
     <hr />
 
 </div>
-<div id="tour-details" class="travelo-box" load-indicator>
+<div id="tour-details" class="travelo-box order-details" load-indicator>
     <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
         <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
         <div class="description">
