--- a/src/app/views/account/invoices/invoices.html
+++ b/src/app/views/account/invoices/invoices.html
@@ -1,64 +1,3 @@
 <div id="booking" class="tab-pane fade in">
-    <h2>Invoices</h2>
-
-    <div class="booking-history">
-        <div class="booking-info clearfix">
-            <h4 class="box-title col-md-2">
-                <i class="icon soap-icon-card yellow-color circle"></i>Invoice
-                <small>ID : 123123123</small>
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Paid
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Approved
-            </h4>
-            <h4 class="box-title col-md-2 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>$21469
-            </h4>
-
-            <button class="btn-mini status">Pay Now</button>
-            <button class="btn-mini status">View Details</button>
-        </div>
-    </div>
-    <div class="booking-history">
-        <div class="booking-info clearfix">
-            <h4 class="box-title col-md-2">
-                <i class="icon soap-icon-card yellow-color circle"></i>Invoice
-                <small>ID : 123123123</small>
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Paid
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Approved
-            </h4>
-            <h4 class="box-title col-md-2 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>$21469
-            </h4>
-
-            <button class="btn-mini status">Pay Now</button>
-            <button class="btn-mini status">View Details</button>
-        </div>
-    </div>
-    <div class="booking-history">
-        <div class="booking-info clearfix">
-            <h4 class="box-title col-md-2">
-                <i class="icon soap-icon-card yellow-color circle"></i>Invoice
-                <small>ID : 123123123</small>
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Paid
-            </h4>
-            <h4 class="box-title col-md-1 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>Approved
-            </h4>
-            <h4 class="box-title col-md-2 col-lg-offset-1">
-                <i class="icon yellow-color circle"></i>$21469
-            </h4>
-
-            <button class="btn-mini status">Pay Now</button>
-            <button class="btn-mini status">View Details</button>
-        </div>
-    </div>
+  <ui-view></ui-view>
 </div>
