--- a/src/app/views/account/orders/list/list.html
+++ b/src/app/views/account/orders/list/list.html
@@ -3,84 +3,26 @@
 
 <div class="booking-history">
 
-    <div class="booking-info clearfix">
+    <div ng-repeat="order in mdl.orders" class="booking-info clearfix">
         <h4 class="box-title">
             <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 1234567890</small>
+            <small>ID : {{order.id}}</small>
         </h4>
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
+            <i class="icon yellow-color circle"></i>{{order.items.length}} items
         </h4>
         <!--<h4 class="box-title col-lg-offset-1">
             <i class="icon soap-icon-departure yellow-color"></i>City,state,California
         </h4>-->
         <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 23,456.00
+            <i class="icon yellow-color circle"></i>${{order.total | number}}
         </h4>
 
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 23,456.00
-        </h4>
-
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 23,456.00
-        </h4>
-
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
-    </div>
-    <div class="booking-info clearfix">
-        <h4 class="box-title">
-            <i class="icon soap-icon-card yellow-color circle"></i>Order
-            <small>ID : 1234567890</small>
-        </h4>
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>3 items
-        </h4>
-        <!--<h4 class="box-title col-lg-offset-1">
-            <i class="icon soap-icon-departure yellow-color"></i>City,state,California
-        </h4>-->
-        <h4 class="box-title col-lg-offset-1">
-            <i class="icon yellow-color circle"></i>$ 23,456.00
-        </h4>
-
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Details</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Cancel</button>
-        <button class="btn-mini status" ui-sref="main.account.orders.view">Return</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.view({id:order.id})">Details</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.list">Cancel</button>
+        <button class="btn-mini status" ui-sref="main.account.orders.list">Return</button>
     </div>
 
-    <a ng-click="listEquiMdl.next()" class="uppercase full-width button btn-large" ng-show="listEquiMdl.nextAvailable">
-        <span ng-show="listEquiMdl.working" class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-        load more </a>
+
+
 </div>
