--- a/src/app/views/account/orders/view/view.html
+++ b/src/app/views/account/orders/view/view.html
@@ -6,9 +6,9 @@
             <h4 class="main-message">Your Order is completed !</h4>
             <p>Please find your order details below.</p>
         </div>
-        <a href="#" class="button print-button btn-small uppercase">Cancel Order</a>
-        <a href="#" class="button print-button btn-small uppercase">Return</a>
-        <a href="#" class="button print-button btn-small uppercase">Print Details</a>
+        <a  class="button print-button btn-small uppercase">Cancel Order</a>
+        <a  class="button print-button btn-small uppercase">Return</a>
+        <a  class="button print-button btn-small uppercase">Print Details</a>
 
     </div>
     <hr />
@@ -28,71 +28,20 @@
 
 </div>
 <div id="tour-details" class="travelo-box order-details" load-indicator>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
+    <div ng-repeat="item in mdl.order.items" class="intro2 small-box border-box table-wrapper hidden-table-sms">
         <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
         <div class="description">
-            <h4>item product name <br /><small>San Francisco</small></h4>
+            <h4>{{item.detail.name}}</h4>
         </div>
         <div class="table-cell">
             <dl class="term-description">
-                <dt>Rented For</dt><dd>20 days</dd>
-                <dt>Order Type</dt><dd>Postpaid</dd>
+                <dt>Rented For</dt><dd>{{item.cost_breakup.subtotal.rent_unit_days}} days</dd>
+                <dt>Order Type</dt><dd>{{item.shipping_kind}}</dd>
             </dl>
         </div>
         <div class="price-section table-cell">
             <div class="price">
-                <div class="price-per-unit">$2100</div>
-            </div>
-        </div>
-    </div>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
-        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
-        <div class="description">
-            <h4>item product name <br /><small>San Francisco</small></h4>
-        </div>
-        <div class="table-cell">
-            <dl class="term-description">
-                <dt>Rented For</dt><dd>20 days</dd>
-                <dt>Order Type</dt><dd>Postpaid</dd>
-            </dl>
-        </div>
-        <div class="price-section table-cell">
-            <div class="price">
-                <div class="price-per-unit">$2100</div>
-            </div>
-        </div>
-    </div>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
-        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
-        <div class="description">
-            <h4>item product name <br /><small>San Francisco</small></h4>
-        </div>
-        <div class="table-cell">
-            <dl class="term-description">
-                <dt>Rented For</dt><dd>20 days</dd>
-                <dt>Order Type</dt><dd>Postpaid</dd>
-            </dl>
-        </div>
-        <div class="price-section table-cell">
-            <div class="price">
-                <div class="price-per-unit">$2100</div>
-            </div>
-        </div>
-    </div>
-    <div class="intro2 small-box border-box table-wrapper hidden-table-sms">
-        <div class="image-container table-cell"><img src="http://placehold.it/80x80" alt=""></div>
-        <div class="description">
-            <h4>item product name <br /><small>San Francisco</small></h4>
-        </div>
-        <div class="table-cell">
-            <dl class="term-description">
-                <dt>Rented For</dt><dd>20 days</dd>
-                <dt>Order Type</dt><dd>Postpaid</dd>
-            </dl>
-        </div>
-        <div class="price-section table-cell">
-            <div class="price">
-                <div class="price-per-unit">$2100</div>
+                <div class="price-per-unit">${{item.subtotal | number}}</div>
             </div>
         </div>
     </div>
@@ -104,13 +53,12 @@
         <br />
         <div class="table-cell">
             <dl class="term-description">
-                <dt>Shipping Cost</dt><dd>${{mdl.data.shipping_charge}}</dd>
-                <dt>Service Tax </dt><dd>${{0}}</dd>
+                <dt>Shipping Cost</dt><dd>${{mdl.order.shipping_charge | number}}</dd>
 
             </dl>
         </div>
         <div class="price-section table-cell">
-            <div class="price"><div class="price-per-unit">${{mdl.data.total}}</div></div>
+            <div class="price"><div class="price-per-unit">${{mdl.order.total | number}}</div></div>
         </div>
     </div>
     <a class="button green btn-large uppercase pull-right" ui-sref="main.account.orders.list">Back to Order List</a>
