--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -1,6 +1,45 @@
 <div id="settings" class="tab-pane">
     <h2>Account Settings</h2>
-    <h5 class="skin-color">Change Your Password</h5>
+    <div ng-controller="TabsDemoCtrl">
+        <p>Select a tab by setting active binding to true:</p>
+        <p>
+            <button type="button" class="btn btn-default btn-sm" ng-click="tabs[0].active = true">Select second tab</button>
+            <button type="button" class="btn btn-default btn-sm" ng-click="tabs[1].active = true">Select third tab</button>
+        </p>
+        <p>
+            <button type="button" class="btn btn-default btn-sm" ng-click="tabs[1].disabled = ! tabs[1].disabled">Enable / Disable third tab</button>
+        </p>
+        <hr />
+
+        <tabset>
+            <tab heading="Static title">Static content</tab>
+            <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disable="tab.disabled">
+                {{tab.content}}
+            </tab>
+            <tab select="alertMe()">
+                <tab-heading>
+                    <i class="glyphicon glyphicon-bell"></i> Alert!
+                </tab-heading>
+                I've got an HTML heading, and a select callback. Pretty cool!
+            </tab>
+        </tabset>
+
+        <hr />
+
+        <tabset vertical="true" type="pills">
+            <tab heading="Vertical 1">Vertical content 1</tab>
+            <tab heading="Vertical 2">Vertical content 2</tab>
+        </tabset>
+
+        <hr />
+
+        <tabset justified="true">
+            <tab heading="Justified">Justified content</tab>
+            <tab heading="SJ">Short Labeled Justified content</tab>
+            <tab heading="Long Justified">Long Labeled Justified content</tab>
+        </tabset>
+    </div>
+    <!--<h5 class="skin-color">Change Your Password</h5>
     <form>
         <div class="row form-group">
             <div class="col-xs-12 col-sm-6 col-md-4">
@@ -68,5 +107,5 @@
             </label>
         </div>
         <button class="btn-medium uppercase">Update All Settings</button>
-    </form>
+    </form>-->
 </div>
