--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -1,6 +1,6 @@
 <div id="settings" class="tab-pane">
     <h2>Account Settings</h2>
-    <div ng-controller="TabsDemoCtrl">
+    <div >
         <p>Select a tab by setting active binding to true:</p>
         <p>
             <button type="button" class="btn btn-default btn-sm" ng-click="tabs[0].active = true">Select second tab</button>
@@ -13,15 +13,8 @@
 
         <tabset>
             <tab heading="Static title">Static content</tab>
-            <tab ng-repeat="tab in tabs" heading="{{tab.title}}" active="tab.active" disable="tab.disabled">
-                {{tab.content}}
-            </tab>
-            <tab select="alertMe()">
-                <tab-heading>
-                    <i class="glyphicon glyphicon-bell"></i> Alert!
-                </tab-heading>
-                I've got an HTML heading, and a select callback. Pretty cool!
-            </tab>
+            <tab heading="Static title1"><h1>Static content</h1></tab>
+            <tab heading="Static title2">Static content</tab>
         </tabset>
 
         <hr />
@@ -109,16 +102,3 @@
         <button class="btn-medium uppercase">Update All Settings</button>
     </form>-->
 </div>
-
-angular.module('ui.bootstrap.demo').controller('TabsDemoCtrl', function ($scope, $window) {
-$scope.tabs = [
-{ title:'Dynamic Title 1', content:'Dynamic content 1' },
-{ title:'Dynamic Title 2', content:'Dynamic content 2', disabled: true }
-];
-
-$scope.alertMe = function() {
-setTimeout(function() {
-$window.alert('You\'ve selected the alert tab!');
-});
-};
-});
