--- a/src/app/views/account/dashboard/dashboard.html
+++ b/src/app/views/account/dashboard/dashboard.html
@@ -21,11 +21,11 @@
         </a>
     </div>
     <div class="col-sm-6 col-md-3">
-        <a >
+        <a ui-sref="main.account.jobsites.list" >
             <div class="fact yellow">
                 <div class="numbers counters-box">
                     <dl>
-                        <dt class="display-counter" data-value="4509">0</dt>
+                        <dt class="display-counter" data-value="4509">{{mdl.jobSitesCount}}</dt>
                         <dd>Your Jobsites</dd>
                     </dl>
                     <i class="icon soap-icon-departure"></i>
