settings tabs modifications

--- a/src/app/views/account/settings/settings.html
+++ b/src/app/views/account/settings/settings.html
@@ -17,15 +17,22 @@
                 <h5 class="skin-color">Standard Method</h5>
                 <div class="row form-group">
                     <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Source Location</label>
-                        <input type="text" class="input-text full-width">
+                        <input type="text" class="input-text full-width" placeholder="Origin Place"> <!-- dropdown -->
                     </div>
                     <div class="col-xs-8 col-sm-4 col-md-3">
-                        <label>Destination</label>
-                        <input type="text" class="input-text full-width">
+                        <input type="text" class="input-text full-width" placeholder="Destination Place">
+                    </div>
+                    <div class="col-xs-8 col-sm-4 col-md-3">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode From">
+                    </div>
+                    <div class="col-xs-8 col-sm-4 col-md-3">
+                        <label>to</label>
+                    </div>
+                    <div class="col-xs-8 col-sm-4 col-md-3">
+                        <input type="text" class="input-text full-width" placeholder="Zipcode To">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
-                        <label>Charges</label>
+                        <label>Cost</label>
                         <input type="text" class="input-text full-width">
                     </div>
                     <div class="col-xs-6 col-sm-3 col-md-2">
